PseudoBF/Frontend/C/ClikeParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.5.0.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.5.0.1 D:\\Projects\\C#\\PseudoBF\\PseudoBF\\Frontend\\C\\Clike.g 2013-03-01 19:23:28

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.5.0.1")]
[System.CLSCompliant(false)]
public partial class ClikeParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADD", "AND", "ARRDEF", "ASSIGN", "CHARLIT", "COMMENT", "EQ", "EXPRLIST", "FUNCALL", "FUNCDECL", "FUNCDEF", "GT", "ID", "IDLIST", "IF", "LT", "MUL", "NEQ", "NOT", "NUMBER", "OR", "PROGRAM", "RETURN", "STANDALONE", "STATLIST", "SUB", "VARDEF", "VARNAME", "WHILE", "WHITESPACE", "'('", "')'", "','", "';'", "'['", "']'", "'extern'", "'func'", "'if'", "'return'", "'var'", "'while'", "'{'", "'}'"
	};
	public const int EOF=-1;
	public const int ADD=4;
	public const int AND=5;
	public const int ARRDEF=6;
	public const int ASSIGN=7;
	public const int CHARLIT=8;
	public const int COMMENT=9;
	public const int EQ=10;
	public const int EXPRLIST=11;
	public const int FUNCALL=12;
	public const int FUNCDECL=13;
	public const int FUNCDEF=14;
	public const int GT=15;
	public const int ID=16;
	public const int IDLIST=17;
	public const int IF=18;
	public const int LT=19;
	public const int MUL=20;
	public const int NEQ=21;
	public const int NOT=22;
	public const int NUMBER=23;
	public const int OR=24;
	public const int PROGRAM=25;
	public const int RETURN=26;
	public const int STANDALONE=27;
	public const int STATLIST=28;
	public const int SUB=29;
	public const int VARDEF=30;
	public const int VARNAME=31;
	public const int WHILE=32;
	public const int WHITESPACE=33;
	public const int T__34=34;
	public const int T__35=35;
	public const int T__36=36;
	public const int T__37=37;
	public const int T__38=38;
	public const int T__39=39;
	public const int T__40=40;
	public const int T__41=41;
	public const int T__42=42;
	public const int T__43=43;
	public const int T__44=44;
	public const int T__45=45;
	public const int T__46=46;
	public const int T__47=47;

	public ClikeParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public ClikeParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return ClikeParser.tokenNames; } }
	public override string GrammarFileName { get { return "D:\\Projects\\C#\\PseudoBF\\PseudoBF\\Frontend\\C\\Clike.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_program();
	partial void LeaveRule_program();
	// $ANTLR start "program"
	// D:\\Projects\\C#\\PseudoBF\\PseudoBF\\Frontend\\C\\Clike.g:13:8: public program : ( fdef )+ EOF -> ^( PROGRAM ( fdef )+ ) ;
	[GrammarRule("program")]
	public AstParserRuleReturnScope<object, IToken> program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken EOF2 = default(IToken);
		AstParserRuleReturnScope<object, IToken> fdef1 = default(AstParserRuleReturnScope<object, IToken>);

		object EOF2_tree = default(object);
		RewriteRuleITokenStream stream_EOF=new RewriteRuleITokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_fdef=new RewriteRuleSubtreeStream(adaptor,"rule fdef");
		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(13, 61);
		try
		{
			// D:\\Projects\\C#\\PseudoBF\\PseudoBF\\Frontend\\C\\Clike.g:13:15: ( ( fdef )+ EOF -> ^( PROGRAM ( fdef )+ ) )
			DebugEnterAlt(1);
			// D:\\Projects\\C#\\PseudoBF\\PseudoBF\\Frontend\\C\\Clike.g:13:17: ( fdef )+ EOF
			{
			DebugLocation(13, 17);
			// D:\\Projects\\C#\\PseudoBF\\PseudoBF\\Frontend\\C\\Clike.g:13:17: ( fdef )+
			int cnt1=0;
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_1 = input.LA(1);

				if (((LA1_1>=40 && LA1_1<=41)))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch (alt1)
				{
				case 1:
					DebugEnterAlt(1);
					// D:\\Projects\\C#\\PseudoBF\\PseudoBF\\Frontend\\C\\Clike.g:13:17: fdef
					{
					DebugLocation(13, 17);
					PushFollow(Follow._fdef_in_program170);
					fdef1=fdef();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) stream_fdef.Add(fdef1.Tree);

					}
					break;

				default:
					if (cnt1 >= 1)
						goto loop1;

					if (state.backtracking>0) {state.failed=true; return retval;}
					EarlyExitException eee1 = new EarlyExitException( 1, input );
					DebugRecognitionException(eee1);
					throw eee1;
				}
				cnt1++;
			}
			loop1:
				;

			} finally { DebugExitSubRule(1); }

			DebugLocation(13, 23);
			EOF2=(IToken)Match(input,EOF,Follow._EOF_in_program173); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_EOF.Add(EOF2);



			{
			// AST REWRITE
			// elements: fdef
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 13:43: -> ^( PROGRAM ( fdef )+ )
			{
				DebugLocation(13, 46);
				// D:\\Projects\\C#\\PseudoBF\\PseudoBF\\Frontend\\C\\Clike.g:13:46: ^( PROGRAM ( fdef )+ )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(13, 48);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(PROGRAM, "PROGRAM"), root_1);

				DebugLocation(13, 56);
				if (!(stream_fdef.HasNext))
				{
					throw new RewriteEarlyExitException();
				}
				while ( stream_fdef.HasNext )
				{
					DebugLocation(13, 56);
					adaptor.AddChild(root_1, stream_fdef.NextTree());

				}
				stream_fdef.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
		}
		DebugLocation(13, 61);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"

	partial void EnterRule_fdef();
	partial void LeaveRule_fdef();
	// $ANTLR start "fdef"
	// D:\\Projects\\C#\\PseudoBF\\PseudoBF\\Frontend\\C\\Clike.g:14:1: fdef : ( 'func' ID idlist stat -> ^( FUNCDEF ID idlist stat ) | 'extern' ID idlist ';' -> ^( FUNCDECL ID idlist ) );
	[GrammarRule("fdef")]
	private AstParserRuleReturnScope<object, IToken> fdef()
	{
		EnterRule_fdef();
		EnterRule("fdef", 2);
		TraceIn("fdef", 2);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken string_literal3 = default(IToken);
		IToken ID4 = default(IToken);
		IToken string_literal7 = default(IToken);
		IToken ID8 = default(IToken);
		IToken char_literal10 = default(IToken);
		AstParserRuleReturnScope<object, IToken> idlist5 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> stat6 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> idlist9 = default(AstParserRuleReturnScope<object, IToken>);

		object string_literal3_tree = default(object);
		object ID4_tree = default(object);
		object string_literal7_tree = default(object);
		object ID8_tree = default(object);
		object char_literal10_tree = default(object);
		RewriteRuleITokenStream stream_41=new RewriteRuleITokenStream(adaptor,"token 41");
		RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
		RewriteRuleITokenStream stream_40=new RewriteRuleITokenStream(adaptor,"token 40");
		RewriteRuleITokenStream stream_37=new RewriteRuleITokenStream(adaptor,"token 37");
		RewriteRuleSubtreeStream stream_idlist=new RewriteRuleSubtreeStream(adaptor,"rule idlist");
		RewriteRuleSubtreeStream stream_stat=new RewriteRuleSubtreeStream(adaptor,"rule stat");
		try { DebugEnterRule(GrammarFileName, "fdef");
		DebugLocation(14, 66);
		try
		{
			// D:\\Projects\\C#\\PseudoBF\\PseudoBF\\Frontend\\C\\Clike.g:14:5: ( 'func' ID idlist stat -> ^( FUNCDEF ID idlist stat ) | 'extern' ID idlist ';' -> ^( FUNCDECL ID idlist ) )
			int alt2=2;
			try { DebugEnterDecision(2, false);
			int LA2_1 = input.LA(1);

			if ((LA2_1==41))
			{
				alt2 = 1;
			}
			else if ((LA2_1==40))
			{
				alt2 = 2;
			}
			else
			{
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae = new NoViableAltException("", 2, 0, input, 1);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// D:\\Projects\\C#\\PseudoBF\\PseudoBF\\Frontend\\C\\Clike.g:14:7: 'func' ID idlist stat
				{
				DebugLocation(14, 7);
				string_literal3=(IToken)Match(input,41,Follow._41_in_fdef204); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_41.Add(string_literal3);

				DebugLocation(14, 14);
				ID4=(IToken)Match(input,ID,Follow._ID_in_fdef206); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_ID.Add(ID4);

				DebugLocation(14, 17);
				PushFollow(Follow._idlist_in_fdef208);
				idlist5=idlist();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) stream_idlist.Add(idlist5.Tree);
				DebugLocation(14, 24);
				PushFollow(Follow._stat_in_fdef210);
				stat6=stat();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) stream_stat.Add(stat6.Tree);


				{
				// AST REWRITE
				// elements: ID, idlist, stat
				// token labels: 
				// rule labels: retval
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				if (state.backtracking == 0) {
				retval.Tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

				root_0 = (object)adaptor.Nil();
				// 14:43: -> ^( FUNCDEF ID idlist stat )
				{
					DebugLocation(14, 46);
					// D:\\Projects\\C#\\PseudoBF\\PseudoBF\\Frontend\\C\\Clike.g:14:46: ^( FUNCDEF ID idlist stat )
					{
					object root_1 = (object)adaptor.Nil();
					DebugLocation(14, 48);
					root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(FUNCDEF, "FUNCDEF"), root_1);

					DebugLocation(14, 56);
					adaptor.AddChild(root_1, stream_ID.NextNode());
					DebugLocation(14, 59);
					adaptor.AddChild(root_1, stream_idlist.NextTree());
					DebugLocation(14, 66);
					adaptor.AddChild(root_1, stream_stat.NextTree());

					adaptor.AddChild(root_0, root_1);
					}

				}

				retval.Tree = root_0;
				}
				}

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// D:\\Projects\\C#\\PseudoBF\\PseudoBF\\Frontend\\C\\Clike.g:15:7: 'extern' ID idlist ';'
				{
				DebugLocation(15, 7);
				string_literal7=(IToken)Match(input,40,Follow._40_in_fdef244); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_40.Add(string_literal7);

				DebugLocation(15, 16);
				ID8=(IToken)Match(input,ID,Follow._ID_in_fdef246); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_ID.Add(ID8);

				DebugLocation(15, 19);
				PushFollow(Follow._idlist_in_fdef248);
				idlist9=idlist();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) stream_idlist.Add(idlist9.Tree);
				DebugLocation(15, 26);
				char_literal10=(IToken)Match(input,37,Follow._37_in_fdef250); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_37.Add(char_literal10);



				{
				// AST REWRITE
				// elements: ID, idlist
				// token labels: 
				// rule labels: retval
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				if (state.backtracking == 0) {
				retval.Tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

				root_0 = (object)adaptor.Nil();
				// 15:43: -> ^( FUNCDECL ID idlist )
				{
					DebugLocation(15, 46);
					// D:\\Projects\\C#\\PseudoBF\\PseudoBF\\Frontend\\C\\Clike.g:15:46: ^( FUNCDECL ID idlist )
					{
					object root_1 = (object)adaptor.Nil();
					DebugLocation(15, 48);
					root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(FUNCDECL, "FUNCDECL"), root_1);

					DebugLocation(15, 57);
					adaptor.AddChild(root_1, stream_ID.NextNode());
					DebugLocation(15, 60);
					adaptor.AddChild(root_1, stream_idlist.NextTree());

					adaptor.AddChild(root_0, root_1);
					}

				}

				retval.Tree = root_0;
				}
				}

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("fdef", 2);
			LeaveRule("fdef", 2);
			LeaveRule_fdef();
		}
		DebugLocation(15, 66);
		} finally { DebugExitRule(GrammarFileName, "fdef"); }
		return retval;

	}
	// $ANTLR end "fdef"

	partial void EnterRule_stat();
	partial void LeaveRule_stat();
	// $ANTLR start "stat"
	// D:\\Projects\\C#\\PseudoBF\\PseudoBF\\Frontend\\C\\Clike.g:16:1: stat : ( 'if' expr stat -> ^( IF expr stat ) | 'while' expr stat -> ^( WHILE expr stat ) | 'return' expr ';' -> ^( RETURN expr ) | expr ';' -> ^( STANDALONE expr ) | ID '=' expr ';' -> ^( ASSIGN ID expr ) | '{' ( stat )* '}' -> ^( STATLIST ( stat )* ) | 'var' vdcl ( ',' vdcl )* ';' -> ( vdcl )+ | ';' ->);
	[GrammarRule("stat")]
	private AstParserRuleReturnScope<object, IToken> stat()
	{
		EnterRule_stat();
		EnterRule("stat", 3);
		TraceIn("stat", 3);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken string_literal11 = default(IToken);
		IToken string_literal14 = default(IToken);
		IToken string_literal17 = default(IToken);
		IToken char_literal19 = default(IToken);
		IToken char_literal21 = default(IToken);
		IToken ID22 = default(IToken);
		IToken char_literal23 = default(IToken);
		IToken char_literal25 = default(IToken);
		IToken char_literal26 = default(IToken);
		IToken char_literal28 = default(IToken);
		IToken string_literal29 = default(IToken);
		IToken char_literal31 = default(IToken);
		IToken char_literal33 = default(IToken);
		IToken char_literal34 = default(IToken);
		AstParserRuleReturnScope<object, IToken> expr12 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> stat13 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> expr15 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> stat16 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> expr18 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> expr20 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> expr24 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> stat27 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> vdcl30 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> vdcl32 = default(AstParserRuleReturnScope<object, IToken>);

		object string_literal11_tree = default(object);
		object string_literal14_tree = default(object);
		object string_literal17_tree = default(object);
		object char_literal19_tree = default(object);
		object char_literal21_tree = default(object);
		object ID22_tree = default(object);
		object char_literal23_tree = default(object);
		object char_literal25_tree = default(object);
		object char_literal26_tree = default(object);
		object char_literal28_tree = default(object);
		object string_literal29_tree = default(object);
		object char_literal31_tree = default(object);
		object char_literal33_tree = default(object);
		object char_literal34_tree = default(object);
		RewriteRuleITokenStream stream_42=new RewriteRuleITokenStream(adaptor,"token 42");
		RewriteRuleITokenStream stream_45=new RewriteRuleITokenStream(adaptor,"token 45");
		RewriteRuleITokenStream stream_43=new RewriteRuleITokenStream(adaptor,"token 43");
		RewriteRuleITokenStream stream_37=new RewriteRuleITokenStream(adaptor,"token 37");
		RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
		RewriteRuleITokenStream stream_ASSIGN=new RewriteRuleITokenStream(adaptor,"token ASSIGN");
		RewriteRuleITokenStream stream_46=new RewriteRuleITokenStream(adaptor,"token 46");
		RewriteRuleITokenStream stream_47=new RewriteRuleITokenStream(adaptor,"token 47");
		RewriteRuleITokenStream stream_44=new RewriteRuleITokenStream(adaptor,"token 44");
		RewriteRuleITokenStream stream_36=new RewriteRuleITokenStream(adaptor,"token 36");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
		RewriteRuleSubtreeStream stream_stat=new RewriteRuleSubtreeStream(adaptor,"rule stat");
		RewriteRuleSubtreeStream stream_vdcl=new RewriteRuleSubtreeStream(adaptor,"rule vdcl");
		try { DebugEnterRule(GrammarFileName, "stat");
		DebugLocation(16, 45);
		try
		{
			// D:\\Projects\\C#\\PseudoBF\\PseudoBF\\Frontend\\C\\Clike.g:16:5: ( 'if' expr stat -> ^( IF expr stat ) | 'while' expr stat -> ^( WHILE expr stat ) | 'return' expr ';' -> ^( RETURN expr ) | expr ';' -> ^( STANDALONE expr ) | ID '=' expr ';' -> ^( ASSIGN ID expr ) | '{' ( stat )* '}' -> ^( STATLIST ( stat )* ) | 'var' vdcl ( ',' vdcl )* ';' -> ( vdcl )+ | ';' ->)
			int alt5=8;
			try { DebugEnterDecision(5, false);
			switch (input.LA(1))
			{
			case 42:
				{
				alt5 = 1;
				}
				break;
			case 45:
				{
				alt5 = 2;
				}
				break;
			case 43:
				{
				alt5 = 3;
				}
				break;
			case CHARLIT:
			case NOT:
			case NUMBER:
			case 34:
				{
				alt5 = 4;
				}
				break;
			case ID:
				{
				int LA5_2 = input.LA(2);

				if ((LA5_2==ASSIGN))
				{
					alt5 = 5;
				}
				else if (((LA5_2>=ADD && LA5_2<=AND)||LA5_2==EQ||LA5_2==GT||(LA5_2>=LT && LA5_2<=NEQ)||LA5_2==OR||LA5_2==SUB||LA5_2==34||LA5_2==37))
				{
					alt5 = 4;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 5, 5, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case 46:
				{
				alt5 = 6;
				}
				break;
			case 44:
				{
				alt5 = 7;
				}
				break;
			case 37:
				{
				alt5 = 8;
				}
				break;
			default:
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 5, 0, input, 1);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(5); }
			switch (alt5)
			{
			case 1:
				DebugEnterAlt(1);
				// D:\\Projects\\C#\\PseudoBF\\PseudoBF\\Frontend\\C\\Clike.g:16:7: 'if' expr stat
				{
				DebugLocation(16, 7);
				string_literal11=(IToken)Match(input,42,Follow._42_in_stat279); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_42.Add(string_literal11);

				DebugLocation(16, 12);
				PushFollow(Follow._expr_in_stat281);
				expr12=expr();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) stream_expr.Add(expr12.Tree);
				DebugLocation(16, 17);
				PushFollow(Follow._stat_in_stat283);
				stat13=stat();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) stream_stat.Add(stat13.Tree);


				{
				// AST REWRITE
				// elements: expr, stat
				// token labels: 
				// rule labels: retval
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				if (state.backtracking == 0) {
				retval.Tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

				root_0 = (object)adaptor.Nil();
				// 16:43: -> ^( IF expr stat )
				{
					DebugLocation(16, 46);
					// D:\\Projects\\C#\\PseudoBF\\PseudoBF\\Frontend\\C\\Clike.g:16:46: ^( IF expr stat )
					{
					object root_1 = (object)adaptor.Nil();
					DebugLocation(16, 48);
					root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(IF, "IF"), root_1);

					DebugLocation(16, 51);
					adaptor.AddChild(root_1, stream_expr.NextTree());
					DebugLocation(16, 56);
					adaptor.AddChild(root_1, stream_stat.NextTree());

					adaptor.AddChild(root_0, root_1);
					}

				}

				retval.Tree = root_0;
				}
				}

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// D:\\Projects\\C#\\PseudoBF\\PseudoBF\\Frontend\\C\\Clike.g:17:7: 'while' expr stat
				{
				DebugLocation(17, 7);
				string_literal14=(IToken)Match(input,45,Follow._45_in_stat322); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_45.Add(string_literal14);

				DebugLocation(17, 15);
				PushFollow(Follow._expr_in_stat324);
				expr15=expr();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) stream_expr.Add(expr15.Tree);
				DebugLocation(17, 20);
				PushFollow(Follow._stat_in_stat326);
				stat16=stat();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) stream_stat.Add(stat16.Tree);


				{
				// AST REWRITE
				// elements: expr, stat
				// token labels: 
				// rule labels: retval
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				if (state.backtracking == 0) {
				retval.Tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

				root_0 = (object)adaptor.Nil();
				// 17:43: -> ^( WHILE expr stat )
				{
					DebugLocation(17, 46);
					// D:\\Projects\\C#\\PseudoBF\\PseudoBF\\Frontend\\C\\Clike.g:17:46: ^( WHILE expr stat )
					{
					object root_1 = (object)adaptor.Nil();
					DebugLocation(17, 48);
					root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(WHILE, "WHILE"), root_1);

					DebugLocation(17, 54);
					adaptor.AddChild(root_1, stream_expr.NextTree());
					DebugLocation(17, 59);
					adaptor.AddChild(root_1, stream_stat.NextTree());

					adaptor.AddChild(root_0, root_1);
					}

				}

				retval.Tree = root_0;
				}
				}

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// D:\\Projects\\C#\\PseudoBF\\PseudoBF\\Frontend\\C\\Clike.g:18:7: 'return' expr ';'
				{
				DebugLocation(18, 7);
				string_literal17=(IToken)Match(input,43,Follow._43_in_stat362); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_43.Add(string_literal17);

				DebugLocation(18, 16);
				PushFollow(Follow._expr_in_stat364);
				expr18=expr();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) stream_expr.Add(expr18.Tree);
				DebugLocation(18, 21);
				char_literal19=(IToken)Match(input,37,Follow._37_in_stat366); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_37.Add(char_literal19);



				{
				// AST REWRITE
				// elements: expr
				// token labels: 
				// rule labels: retval
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				if (state.backtracking == 0) {
				retval.Tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

				root_0 = (object)adaptor.Nil();
				// 18:43: -> ^( RETURN expr )
				{
					DebugLocation(18, 46);
					// D:\\Projects\\C#\\PseudoBF\\PseudoBF\\Frontend\\C\\Clike.g:18:46: ^( RETURN expr )
					{
					object root_1 = (object)adaptor.Nil();
					DebugLocation(18, 48);
					root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(RETURN, "RETURN"), root_1);

					DebugLocation(18, 55);
					adaptor.AddChild(root_1, stream_expr.NextTree());

					adaptor.AddChild(root_0, root_1);
					}

				}

				retval.Tree = root_0;
				}
				}

				}
				break;
			case 4:
				DebugEnterAlt(4);
				// D:\\Projects\\C#\\PseudoBF\\PseudoBF\\Frontend\\C\\Clike.g:19:7: expr ';'
				{
				DebugLocation(19, 7);
				PushFollow(Follow._expr_in_stat400);
				expr20=expr();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) stream_expr.Add(expr20.Tree);
				DebugLocation(19, 12);
				char_literal21=(IToken)Match(input,37,Follow._37_in_stat402); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_37.Add(char_literal21);


